# lcms-ocr

./: pyproject.toml  script_baidu.py
baiduoutput/: test_data_res.json
